Fixed spacing between sections

--- a/style.css
+++ b/style.css
@@ -1,10 +1,3 @@
-* {
-  margin-bottom: 20px;
-  margin-top: 20px;
-}
-html {
-  margin-top: 0px;
-}
 body {
   margin: 0;
   padding: 0;
@@ -18,9 +11,11 @@ body {
 
 .footer {
   margin-bottom: 0px;
+  margin-top: 20px;
 }
 
 .header {
+  margin-bottom: 20px;
   display: flex;
   justify-content: space-around;
 }
@@ -66,6 +61,7 @@ a {
   width: 100px;
   height: 30px;
   border-radius: 5px;
+  margin-bottom: 30px;
 }
 
 .info-header {
@@ -85,6 +81,8 @@ a {
   font-size: 36px;
   font-weight: 300;
   font-style: italic;
+  margin-top: 30px;
+  margin-bottom: 40px;
 }
 .saying {
   width: 800px;
@@ -100,6 +98,7 @@ a {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  margin-bottom: 40px;
 }
 
 .cta-content {
@@ -164,6 +163,8 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 20px;
+  margin-bottom: 40px;
 }
 
 .inner-content {
